# password_Al-Qassam

./: .gitignore  README.md  pyproject.toml
password_Al_Qassam/: main.py
